package util;

option java_package = "com.streamsets.pipeline.lib.util";
option java_outer_classname = "PersonProto";

message Person {

  extensions 100 to 199;

  required string name = 1;
  required int32 id = 2;
  repeated string email = 3;

  enum PhoneType {
    MOBILE = 0;
    HOME = 1;
    WORK = 2;
  }

  message PhoneNumber {
    required string number = 1;
    optional PhoneType type = 2 [default = HOME];
  }

  repeated PhoneNumber phone = 4;
}
